# Tenebris

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  base_app.hpp  compile_commands.json  main.cpp  vcpkg-configuration.json  vcpkg.json  window.hpp
shaders/: common_func.glsl  draw.comp.glsl  final_pass.glsl  multiscattering.glsl  perframe.comp.glsl  screen_triangle.glsl  skyview.glsl  startup.comp.glsl  transmittance.comp.glsl  transmittance.glsl
shaders/utils/: raytrace.glsl
shared/: player.inl  scene.inl  shared.inl  user_input.inl
source/: application.cpp  application.hpp  application_old.cpp  base_app.cpp  camera.cpp  camera.hpp  gui_manager.cpp  gui_manager.hpp  gui_state.hpp  main.cpp  renderer.cpp  renderer.hpp  utils.hpp  window.hpp  window_old.hpp
source/renderer/: context.hpp  renderer.cpp  renderer.hpp  texture_manager.cpp  texture_manager.hpp
source/renderer/shaders/: adapt_average_luminance.glsl  analyse_depthbuffer.glsl  analyze_depthbuffer.glsl  bc6h_compress.glsl  common_func.glsl  debug_draw_frustum.glsl  deferred_pass.glsl  draw_far_sky.glsl  draw_terrain.glsl  esm_pass.glsl  height_to_normal.glsl  luminance_histogram.glsl  multiscattering.glsl  poisson_points.glsl  post_process.glsl  prepare_shadow_matrices.glsl  screen_triangle.glsl  skyview.glsl  transmittance.glsl  vsm_allocate_pages.glsl  vsm_clear_dirty_bit.glsl  vsm_clear_pages.glsl  vsm_common.glsl  vsm_debug_page_table.glsl  vsm_debug_paging_table.glsl  vsm_debug_pass.glsl  vsm_draw_pages.glsl  vsm_find_free_pages.glsl  vsm_free_wrapped_pages.glsl
source/renderer/shared/: shared.inl
source/renderer/tasks/: ESM_pass.inl  adapt_average_luminance.inl  analyse_depthbuffer.inl  analyze_depthbuffer.inl  bc6h_compress.inl  debug_draw_frustum.inl  deferred_pass.inl  draw_far_sky.hpp  draw_far_sky.inl  draw_terrain.hpp  draw_terrain.inl  generate_poisson_points.hpp  height_to_normal.inl  imgui_task.hpp  imgui_task.inl  luminance_histogram.inl  multiscattering_LUT.hpp  multiscattering_LUT.inl  post_process.hpp  post_process.inl  prepare_shadow_matrices.inl  shadowmap.inl  skyview_LUT.hpp  skyview_LUT.inl  transmittance_LUT.hpp  transmittance_LUT.inl  upload_input_data.hpp  upload_input_data.inl  vsm_allocate_pages.inl  vsm_clear_dirty_bit.inl  vsm_clear_pages.inl  vsm_debug_page_table.inl  vsm_debug_paging_table.inl  vsm_debug_pass.inl  vsm_draw_pages.inl  vsm_find_free_pages.inl  vsm_free_wrapped_pages.inl
source/renderer/texture_manager/: dds_types.hpp  load_format_dds.cpp  load_format_exr.cpp  load_formats.hpp  texture_manager.cpp  texture_manager.hpp
source/renderer/texture_manager/shaders/: bc6h_compress.glsl  height_to_normal.glsl
source/renderer/texture_manager/tasks/: bc6h_compress.inl  height_to_normal.inl
source/terrain_gen/: planet_generator.cpp  planet_generator.hpp  poisson_generator.hpp
